build/log/idf_py_stderr_output_46260
Command: make -j 10 all
/Users/markgrun/Watch18.1/horaWatchSoftware/components/bsp/boards/generic_spi/display_spi.c: In function 'bsp_display_init_and_register_lvgl':
/Users/markgrun/Watch18.1/horaWatchSoftware/components/bsp/boards/generic_spi/display_spi.c:151:9: error: passing argument 2 of 'lv_display_set_draw_buffers' from incompatible pointer type [-Wincompatible-pointer-types]
  151 |         s_buf1,
      |         ^~~~~~
      |         |
      |         lv_color_t *
In file included from /Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/src/core/lv_obj_tree.h:18,
                 from /Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/src/core/lv_obj.h:24,
                 from /Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/lvgl.h:44,
                 from /Users/markgrun/Watch18.1/horaWatchSoftware/components/bsp/boards/generic_spi/display_spi.c:15:
/Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/src/core/../display/lv_display.h:293:71: note: expected 'lv_draw_buf_t *' {aka 'struct _lv_draw_buf_t *'} but argument is of type 'lv_color_t *'
  293 | void lv_display_set_draw_buffers(lv_display_t * disp, lv_draw_buf_t * buf1, lv_draw_buf_t * buf2);
      |                                                       ~~~~~~~~~~~~~~~~^~~~
/Users/markgrun/Watch18.1/horaWatchSoftware/components/bsp/boards/generic_spi/display_spi.c:152:9: error: passing argument 3 of 'lv_display_set_draw_buffers' from incompatible pointer type [-Wincompatible-pointer-types]
  152 |         s_buf2,
      |         ^~~~~~
      |         |
      |         lv_color_t *
/Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/src/core/../display/lv_display.h:293:93: note: expected 'lv_draw_buf_t *' {aka 'struct _lv_draw_buf_t *'} but argument is of type 'lv_color_t *'
  293 | void lv_display_set_draw_buffers(lv_display_t * disp, lv_draw_buf_t * buf1, lv_draw_buf_t * buf2);
      |                                                                             ~~~~~~~~~~~~~~~~^~~~
/Users/markgrun/Watch18.1/horaWatchSoftware/components/bsp/boards/generic_spi/display_spi.c:149:5: error: too many arguments to function 'lv_display_set_draw_buffers'; expected 3, have 5
  149 |     lv_display_set_draw_buffers(
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
......
  153 |         buf_pixels * sizeof(lv_color_t),
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/markgrun/Watch18.1/horaWatchSoftware/components/lvgl/src/core/../display/lv_display.h:293:6: note: declared here
  293 | void lv_display_set_draw_buffers(lv_display_t * disp, lv_draw_buf_t * buf1, lv_draw_buf_t * buf2);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/bsp/CMakeFiles/__idf_bsp.dir/boards/generic_spi/display_spi.c.obj] Error 1
make[1]: *** [esp-idf/bsp/CMakeFiles/__idf_bsp.dir/all] Error 2
make: *** [all] Error 2
